sharding and commands rerouting